--- a/pom.xml
+++ b/pom.xml
@@ -6,43 +6,50 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ho.qat.heo</groupId>
     <artifactId>seo-technical-task</artifactId>
-
     <version>1.0-SNAPSHOT</version>
-
     <name>SEO Technical Task</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <serenity.version>2.3.8</serenity.version>
+        <serenity.version>3.9.0</serenity.version>
         <serenity.cucumber.version>2.3.6</serenity.cucumber.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.plugin.version>3.0.0-M4</maven.plugin.version>
         <parallel.tests>4</parallel.tests>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd.maven.plugins/serenity-maven-plugin -->
+        <dependency>
+            <groupId>net.serenity-bdd.maven.plugins</groupId>
+            <artifactId>serenity-maven-plugin</artifactId>
+            <version>3.9.0</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
-            <version>4.5.2</version>
-            <scope>test</scope>
+            <version>3.9.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-junit -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-junit</artifactId>
-            <version>5.1.1</version>
+            <version>3.9.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-rest-assured -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-rest-assured</artifactId>
-            <version>7.2.1</version>
+            <version>3.9.0</version>
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
@@ -59,6 +66,18 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-core</artifactId>
+            <version>2.3.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-core</artifactId>
+            <version>2.3.7</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -105,7 +124,7 @@
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
+                <version>3.9.0</version>
                 <executions>
                     <execution>
                         <id>serenity-reports</id>
