--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,7 +1,7 @@
 webdriver {
   driver = chrome
 }
-headless.mode = true
+headless.mode = false
 
 chrome.switches="""--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
@@ -9,17 +9,17 @@ chrome.switches="""--start-maximized;--test-type;--no-sandbox;--ignore-certifica
 
 gecko.firefox.options="""{"args": ["-headless"]}"""
 
-drivers {
-  windows {
-    webdriver.chrome.driver = "src/test/resources/webDrivers/windows/chromedriver.exe"
-    webdriver.gecko.driver = "src/test/resources/webDrivers/windows/geckodriver.exe"
-  }
-  mac {
-    webdriver.chrome.driver = "src/test/resources/webDrivers/mac/chromedriver"
-    webdriver.gecko.driver = "src/test/resources/webDrivers/mac/geckodriver"
-  }
-  linux {
-    webdriver.chrome.driver = "src/test/resources/webDrivers/linux/chromedriver"
-    webdriver.gecko.driver = "src/test/resources/WebDrivers/linux/geckodriver"
-  }
-}
+#drivers {
+#  windows {
+#    webdriver.chrome.driver = "src/test/resources/webDrivers/windows/chromedriver.exe"
+#    webdriver.gecko.driver = "src/test/resources/webDrivers/windows/geckodriver.exe"
+#  }
+#  mac {
+#    webdriver.chrome.driver = "src/test/resources/webDrivers/mac/chromedriver"
+#    webdriver.gecko.driver = "src/test/resources/webDrivers/mac/geckodriver"
+#  }
+#  linux {
+#    webdriver.chrome.driver = "src/test/resources/webDrivers/linux/chromedriver"
+#    webdriver.gecko.driver = "src/test/resources/WebDrivers/linux/geckodriver"
+#  }
+#}
