--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <serenity.version>3.9.0</serenity.version>
-        <serenity.cucumber.version>2.3.6</serenity.cucumber.version>
+        <serenity.cucumber.version>3.9.0</serenity.cucumber.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.plugin.version>3.0.0-M4</maven.plugin.version>
         <parallel.tests>4</parallel.tests>
@@ -53,7 +53,7 @@
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-cucumber6</artifactId>
+            <artifactId>serenity-cucumber</artifactId>
             <version>${serenity.cucumber.version}</version>
         </dependency>
         <dependency>
@@ -79,6 +79,18 @@
             <artifactId>serenity-core</artifactId>
             <version>2.3.7</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-core</artifactId>
+            <version>3.9.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
